Fixes spacing of skills elements and adds container for badges.

--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -198,7 +198,7 @@ section.about div article {
 /****** SECTION SKILLS ******/
 
 section.skills article {
-	padding: 0 80px 40px 80px;
+	padding: 0 80px;
 }
 
 section.skills article table {
